--- a/vue2-poll/index.html
+++ b/vue2-poll/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Vue2Poll</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-    <script src="../dist/vue2-poll-plugin.js"></script>
+    <script src="./vue2-poll-plugin.js"></script>
     <style>
         body {
             background-color: #eee;
